# python_academy_notes

./: 001_week_1.html  002_week_2.html  002_week_2.qmd  README.md  main.py  pyproject.toml
001_week_1/: 001_week_1.qmd  Week1_Demo_PostSession(1).qmd  Week1_Demo_PostSession.qmd
002_week_2/: 002_week_2.qmd  Week 2 Demo.qmd
003_week_3/: 003_week_3.html  003_week_3.qmd
004_week_4/: 004_week_4.qmd  Posit Academy Week 4.qmd  Week 4 Demo.qmd
005_week_5/: 005_week_5.qmd  Week 5 Shapes Driver.qmd  Week 5 Shapes.py
posit_academy/: 00-README.md  covid_01_quarto_python-basics.qmd  covid_02_quarto_python-filter_visualize.qmd  covid_03_quarto_python-create_select_columns.qmd  covid_04_quarto_python-functions.qmd  covid_05_quarto_python-summarize.qmd  covid_05_quarto_python-summarize_r2.qmd  pyproject.toml
posit_academy/data/: covid_with_months.csv
