[project]
name = "python-academy-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.18.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.1",
    "penguins>=0.5.2",
    "plotnine>=0.15.0",
    "polars>=1.32.0",
]
