[project]
name = "covid-project"
version = "0.1.0"
description = "COVID-19 Analysis Project"
requires-python = ">=3.10"
dependencies = [
    "great-tables>=0.18.0",
    "ipython==8.31.0",
    "jupyter==1.1.1",
    "matplotlib==3.9.0",
    "pandas==2.2.3",
    "plotnine==0.14.5",
    "statsmodels==0.14.2",
]
